[gd_scene load_steps=5 format=3 uid="uid://dohj0q4m68fvr"]

[ext_resource type="Script" path="res://levels/main_menu/main_menu.gd" id="1_llfsj"]

[sub_resource type="LabelSettings" id="LabelSettings_tfgng"]
font_size = 72
font_color = Color(1, 0.996078, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o8mjo"]
font_size = 32
font_color = Color(1, 0.996078, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7m7pg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_llfsj")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Background"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = 3.0
offset_right = 221.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20

[node name="MenuContainer" type="VBoxContainer" parent="Background/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 195

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/MenuContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
theme_override_constants/separation = 99
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/MenuContainer/HBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Background/MarginContainer/MenuContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Eye Contact"
label_settings = SubResource("LabelSettings_tfgng")
horizontal_alignment = 1

[node name="Label" type="Label" parent="Background/MarginContainer/MenuContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Belzebubble's Attack"
label_settings = SubResource("LabelSettings_o8mjo")
horizontal_alignment = 1

[node name="PressAButton" type="RichTextLabel" parent="Background/MarginContainer/MenuContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center][wave amp=50]Press any button to start"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="MarginContainer2" type="MarginContainer" parent="Background"]
layout_mode = 2
offset_left = 420.0
offset_top = 595.0
offset_right = 861.0
offset_bottom = 698.0
theme_override_constants/margin_top = 80

[node name="Credits" type="Label" parent="Background/MarginContainer2"]
layout_mode = 2
text = "By Dead Pixel and Sitraka
"
label_settings = SubResource("LabelSettings_7m7pg")
horizontal_alignment = 1

[node name="StartGameSound" type="AudioStreamPlayer2D" parent="."]

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]

[node name="SelectSound" type="AudioStreamPlayer2D" parent="."]
